--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,26 @@
 body{
     background-color: black;
 }
+
+.container{
+    max-width: 1200px;
+    margin: 1.5rem auto;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: brown;
+   
+
+}
+
+button{
+    padding: 1.5rem;
+    text-align: center;
+  
+}
+
+.casella{
+    aspect-ratio: 1/1;
+    width: calc(100% / 10);
+    border-radius: 2px;
+    border: solid white;
+}
